<resources>
    <string name="title_settings_activity">Settings</string>
    <string name="label_settings_fragment">Settings</string>
    <string name="pref_temperature_default_value">@string/pref_units_metric_value</string>
    <string name="pref_wind_speed_default_value">@string/pref_units_metric_value</string>
    <string name="pref_time_format_default_value">@string/pref_time_format_24_value</string>
    <string name="pref_temperature_dialog_title">Unit Type</string>
    <string name="pref_units_key">unit_type</string>
    <string name="pref_units_title">Unit type</string>
    <string name="pref_units_metric_value">metric</string>
    <string name="pref_units_imperial_value">imperial</string>
    <string name="pref_time_format_12_value">12</string>
    <string name="pref_time_format_24_value">24</string>
    <string name="pref_temperature_metric_entry">\u2103</string>
    <string name="pref_temperature_imperial_entry">\u2109</string>
    <string name="settings_label">Settings</string>
    <string name="pref_temperature_unit_key">temperature unit</string>
    <string name="pref_temperature_title">Temperature</string>
    <string name="pref_wind_speed_unit_key">wind speed unit</string>
    <string name="pref_wind_speed_title">Wind Speed</string>
    <string name="pref_wind_speed_dialog_title">Unit Type</string>
    <string name="pref_wind_speed_metric_entry">km/h</string>
    <string name="pref_wind_speed_imperial_entry">mph</string>
    <string name="pref_time_format_title">Time Format</string>
    <string name="pref_time_format_dialog_title">Unit Type</string>
    <string name="pref_time_format_key">time format</string>
    <string name="pref_alert_notification_key">alert notification</string>
    <string name="pref_alert_notification_default_value">false</string>
    <string name="pref_alert_notification_title">Weather Alerts</string>
    <string name="pref_alert_notification_summary">Get weather alerts for your location</string>
    <string name="text_location_permission_denied">Location access permission needed!</string>
    <string name="pref_dark_mode_default_value">false</string>
    <string name="pref_theme_dialog_title">App Theme</string>
    <string name="pref_dark_mode_key">dark mode</string>
    <string name="pref_theme_weather_value">Weather</string>
    <string name="pref_dark_mode_title">Dark Mode</string>

    <string-array name="pref_temperature_list_entries">
        <item>@string/pref_temperature_metric_entry</item>
        <item>@string/pref_temperature_imperial_entry</item>
    </string-array>
    <string-array name="pref_temperature_list_values">
        <item>@string/pref_units_metric_value</item>
        <item>@string/pref_units_imperial_value</item>
    </string-array>
    <string-array name="pref_wind_speed_list_entries">
        <item>@string/pref_wind_speed_metric_entry</item>
        <item>@string/pref_wind_speed_imperial_entry</item>
    </string-array>
    <string-array name="pref_wind_speed_list_values">
        <item>@string/pref_units_metric_value</item>
        <item>@string/pref_units_imperial_value</item>
    </string-array>
    <string-array name="pref_time_format_list_entries">
        <item>@string/pref_time_format_24_value</item>
        <item>@string/pref_time_format_12_value</item>
    </string-array>
    <string-array name="pref_time_format_list_values">
        <item>@string/pref_time_format_24_value</item>
        <item>@string/pref_time_format_12_value</item>
    </string-array>

</resources>